--- a/customer/docker-compose.yml
+++ b/customer/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     container_name: postgres
     image: postgres:13.2-alpine
     environment:
-      POSTGRES_USER: amigoscode
+      POSTGRES_DB: customer
+      POSTGRES_USER: baggio
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     ports:
