Add new module clients - module for inter-service communication via loadBalanced web client using HttpExchange interface

--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -38,6 +38,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.baggio</groupId>
+            <artifactId>clients</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
 
