--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <spring.boot.maven.plugin.version>3.1.2</spring.boot.maven.plugin.version>
         <spring.boot.dependencies.version>3.1.2</spring.boot.dependencies.version>
         <spring-cloud.version>2022.0.3</spring-cloud.version>
+        <spring.webflux.version>6.0.6</spring.webflux.version>
     </properties>
 
     <dependencyManagement>
@@ -71,6 +72,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring.boot.dependencies.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>${spring.webflux.version}</version>
+        </dependency>
+
 
     </dependencies>
 
