--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       POSTGRES_DB: customer
       POSTGRES_USER: baggio
       POSTGRES_PASSWORD: password
-      PGDATA: /data/postgres
     ports:
       - "5432:5432"
 
@@ -22,3 +21,13 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - "6432:5432"
+
+  notification-db:
+    container_name: notification-db
+    image: postgres:13.2-alpine
+    environment:
+      POSTGRES_DB: notification
+      POSTGRES_USER: baggio
+      POSTGRES_PASSWORD: password
+    ports:
+      - "7432:5432"
