--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>fraud</module>
         <module>eureka-server</module>
         <module>notification</module>
+        <module>api-gateway</module>
     </modules>
     <packaging>pom</packaging>
 
