--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,10 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - "7432:5432"
+
+  rabbitmq:
+    image: rabbitmq:3.9.11-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
