--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>eureka-server</module>
         <module>notification</module>
         <module>api-gateway</module>
+        <module>amqp</module>
     </modules>
     <packaging>pom</packaging>
 
