--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,11 @@
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <kotlin.version>1.8.22</kotlin.version>
-        <spring.boot.maven.plugin.version>3.1.2</spring.boot.maven.plugin.version>
-        <spring.boot.dependencies.version>3.1.2</spring.boot.dependencies.version>
+        <spring.boot.maven.plugin.version>3.1.1</spring.boot.maven.plugin.version>
+        <spring.boot.dependencies.version>3.1.1</spring.boot.dependencies.version>
         <spring-cloud.version>2022.0.3</spring-cloud.version>
         <spring.webflux.version>6.0.6</spring.webflux.version>
+        <maven.compiler.version>3.11.0</maven.compiler.version>
     </properties>
 
     <dependencyManagement>
@@ -90,8 +91,15 @@
             <plugins>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-plugin-maven</artifactId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.maven.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
 
             </plugins>
@@ -100,6 +108,18 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                </configuration>
+            </plugin>
+
+
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
