--- a/notification/src/main/resources/application-kube.yml
+++ b/notification/src/main/resources/application-kube.yml
@@ -16,7 +16,7 @@ spring:
         format_sql: true
     show_sql: true
   rabbitmq:
-    addresses: rabbitmq:5672
+    addresses: ${RABBIT_MQ_HOST}:5672
 
 rabbitmq:
   exchanges:
