--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -24,7 +24,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
-    enabled: false
+    enabled: true
 
 service:
   fraud:
